[gd_scene load_steps=3 format=3 uid="uid://b04jkm5ht1kri"]

[ext_resource type="Script" uid="uid://dnded3vnu0mv6" path="res://Scripts/GameController.gd" id="1_idj7w"]
[ext_resource type="PackedScene" uid="uid://clyq0flge8xkt" path="res://Scenes/EventPanel.tscn" id="2_idj7w"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_idj7w")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 300)

[node name="MoveButton" type="Button" parent="Camera2D"]
offset_left = 321.0
offset_top = 13.0
offset_right = 388.0
offset_bottom = 44.0
text = "Move"

[node name="SearchButton" type="Button" parent="Camera2D"]
offset_left = 319.0
offset_top = -40.0
offset_right = 386.0
offset_bottom = -9.0
text = "Search"

[node name="ExploreButton" type="Button" parent="Camera2D"]
offset_left = 319.0
offset_top = -92.0
offset_right = 386.0
offset_bottom = -61.0
text = "Explore"

[node name="LightLabel" type="Label" parent="Camera2D"]
offset_left = 329.0
offset_top = -271.0
offset_right = 372.0
offset_bottom = -248.0
text = "Light:"

[node name="TorchLabel" type="Label" parent="Camera2D"]
offset_left = 329.0
offset_top = -202.0
offset_right = 378.0
offset_bottom = -179.0
text = "Torchs:"

[node name="HealthLabel" type="Label" parent="Camera2D"]
offset_left = 329.0
offset_top = -154.0
offset_right = 386.0
offset_bottom = -131.0
text = "Health:"

[node name="DescriptionLabel" type="RichTextLabel" parent="Camera2D"]
offset_left = 266.0
offset_top = 75.0
offset_right = 460.0
offset_bottom = 265.0
text = "Description"

[node name="EventPanel" parent="Camera2D" instance=ExtResource("2_idj7w")]
visible = false
top_level = true
position = Vector2(1, 0)

[connection signal="pressed" from="Camera2D/MoveButton" to="." method="_on_move_button_pressed"]
[connection signal="pressed" from="Camera2D/SearchButton" to="." method="_on_search_button_pressed"]
[connection signal="pressed" from="Camera2D/ExploreButton" to="." method="_on_explore_button_pressed"]
